--- a/build.gradle
+++ b/build.gradle
@@ -55,13 +55,16 @@ allprojects {
         jcenter()
         mavenCentral()
         maven { url 'https://jitpack.io' }
-        maven { url 'https://maven.fabric.io/public' }          // fabric
-        maven { url 'http://maven.cloudrail.com' }              // cloudrail
-        maven {url "https://clojars.org/repo/"}                 // icepick
-//        flatDir {
-//            // use libs directory as a Maven repository.
-//            dirs 'libs'
-//        }
+        maven { url 'https://maven.fabric.io/public' }
+        // fabric
+        maven { url 'http://maven.cloudrail.com' }
+        // cloudrail
+        maven { url 'https://clojars.org/repo/' }
+        // icepick
+        //        flatDir {
+        maven { url '//            // use libs directory as a Maven repository.' }
+        //            dirs 'libs'
+        //        }
     }
 
     /**
